force-app/main/default/objects/Fixed_Asset__c/Fixed_Asset__c.object-meta.xml
<CustomObject>
    <description>Object with same name installed as part of FFA. Custom object created to allow access beyond FFA licenses. If future evaluation shows benefit of FFA installed object, we will move data into that structure and remove/retire this object.</description>
    <label>Fixed Asset</label>
    <nameField>
        <label>Fixed Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fixed Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>