force-app/main/default/objects/Fixed_Asset__c/fields/Date_in_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_in_Service__c</fullName>
    <inlineHelpText>The date in which the device was set up for the user, even if it is an older device being repurposed.</inlineHelpText>
    <label>Date in Service</label>
    <type>Date</type>
</CustomField>