force-app/main/default/objects/Fixed_Asset__c/fields/Depreciation_Method__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Method__c</fullName>
    <label>Depreciation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Straight Line 10</fullName>
            </value>
            <value>
                <fullName>Straight Line 5</fullName>
            </value>
            <value>
                <fullName>Straight Line 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>