force-app/main/default/objects/Fixed_Asset__c/fields/Depreciation_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Per_Month__c</fullName>
    <formula>if ( ispickval(Depreciation_Method__c, &quot;Straight Line 10&quot;),  Cost__c / 120,

if ( ispickval(Depreciation_Method__c, &quot;Straight Line 5&quot;),  Cost__c / 60,

if ( ispickval(Depreciation_Method__c, &quot;Straight Line 3&quot;),  Cost__c / 36,

NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Depreciation Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>