force-app/main/default/objects/Fixed_Asset__c/fields/Employee_Tech_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Employee_Tech_Assignment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Who the device is currently assigned to whether its an employee or to a specific meeting room.</inlineHelpText>
    <label>Employee Tech Assignment</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Fixed Assets (Employee Tech Assignment)</relationshipLabel>
    <relationshipName>Fixed_Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>