force-app/main/default/objects/Fixed_Asset__c/fields/Employee_Vehicle_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Employee_Vehicle_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Vehicle Assignment</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Fixed Assets</relationshipLabel>
    <relationshipName>Fixed_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>