force-app/main/default/objects/Fixed_Asset__c/fields/Exclude_From_API__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_API__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field will be filter in API to return the vehicle List</description>
    <label>Exclude From API</label>
    <type>Checkbox</type>
</CustomField>