force-app/main/default/objects/Fixed_Asset__c/fields/Expected_Disposal__c.field-meta.xml
<CustomField>
    <fullName>Expected_Disposal__c</fullName>
    <label>Expected Disposal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>