force-app/main/default/objects/Fixed_Asset__c/fields/Fixed_Asset_Description__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Asset_Description__c</fullName>
    <inlineHelpText>Any helpful extra notes should go here.</inlineHelpText>
    <label>Fixed Asset Description/Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>