force-app/main/default/objects/Fixed_Asset__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Source</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fixed Assets (Funding Source)</relationshipLabel>
    <relationshipName>Fixed_Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>