force-app/main/default/objects/Fixed_Asset__c/fields/Historical_Tag_Number__c.field-meta.xml
<CustomField>
    <fullName>Historical_Tag_Number__c</fullName>
    <inlineHelpText>Use if auto-generated Tag Number needs to be overwritten</inlineHelpText>
    <label>Historical Tag Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>