force-app/main/default/objects/Fixed_Asset__c/fields/Memory_GB__c.field-meta.xml
<CustomField>
    <fullName>Memory_GB__c</fullName>
    <label>Memory (GB)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>