force-app/main/default/objects/Fixed_Asset__c/fields/Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Operating_System__c</fullName>
    <inlineHelpText>If not applicable please select &quot;N/A&quot;</inlineHelpText>
    <label>Operating System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Windows 7</fullName>
            </value>
            <value>
                <fullName>Windows 10</fullName>
            </value>
            <value>
                <fullName>Windows 11</fullName>
            </value>
            <value>
                <fullName>IOS</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>N/A (for non-laptop/desktop devices)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>