force-app/main/default/objects/Fixed_Asset__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <inlineHelpText>Initial date the device was bought, ask finance if you do not know.</inlineHelpText>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>