force-app/main/default/objects/Fixed_Asset__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <inlineHelpText>Can be found on the device and is unique (usually labeled as &quot;S/n:&quot; on device information sticker)</inlineHelpText>
    <label>Serial Number or Service Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>