force-app/main/default/objects/Fixed_Asset__c/fields/Tag_Number__c.field-meta.xml
<CustomField>
    <fullName>Tag_Number__c</fullName>
    <displayFormat>{000}</displayFormat>
    <label>Tag Number</label>
    <type>AutoNumber</type>
</CustomField>