force-app/main/default/objects/Fixed_Asset__c/fields/Tag_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Tag_Number_Formula__c</fullName>
    <formula>if (not(isblank(Historical_Tag_Number__c)), Historical_Tag_Number__c,

text( Location__c ) &amp; &quot;-&quot; &amp; text(year( Date_in_Service__c)) &amp; Tag_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tag Number</label>
    <type>Text</type>
</CustomField>