force-app/main/default/objects/Fixed_Asset__c/fields/Warranty_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Expiration_Date__c</fullName>
    <inlineHelpText>Most companies have warranty databases on their websites, you usually just need to enter the device’s serial number. 
Lenovo: https://pcsupport.lenovo.com/us/en/warrantylookup#/  
Dell: https://www.dell.com/support/home/en-us?app=warranty  
HP: https://support.hp.com/us-en/checkwarranty</inlineHelpText>
    <label>Warranty Expiration Date</label>
    <type>Date</type>
</CustomField>