force-app/main/default/objects/Fixed_Asset__c/recordTypes/Technology.recordType-meta.xml
<RecordType>
    <fullName>Technology</fullName>
    <active>true</active>
    <label>Technology</label>
</RecordType>