force-app/main/default/objects/Fixed_Asset__c/validationRules/Disposal_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Disposal_Date</fullName>
    <active>true</active>
    <errorConditionFormula>ispickval(Status__c, &quot;Disposed&quot;) &amp;&amp; isblank(Disposal_Date__c)</errorConditionFormula>
    <errorDisplayField>Disposal_Date__c</errorDisplayField>
    <errorMessage>Input the date the asset was disposed of.</errorMessage>
</ValidationRule>