force-app/main/default/objects/Fixed_Asset__c/listViews/Move_out_of_Shared_Technology.listView-meta.xml
<ListView>
    <fullName>Move_out_of_Shared_Technology</fullName>
    <columns>NAME</columns>
    <columns>Tag_Number_Formula__c</columns>
    <columns>Status__c</columns>
    <columns>Date_in_Service__c</columns>
    <columns>Disposal_Date__c</columns>
    <columns>Location__c</columns>
    <columns>Fixed_Asset_Description__c</columns>
    <columns>Employee_Tech_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Fixed_Asset__c.Technology</value>
    </filters>
    <filters>
        <field>Employee_Tech_Assignment__c</field>
        <operation>equals</operation>
        <value>Shared Technology</value>
    </filters>
    <label>Move out of Shared Technology</label>
</ListView>