force-app/main/default/objects/Fixed_Asset__c/listViews/Technology.listView-meta.xml
<ListView>
    <fullName>Technology</fullName>
    <columns>NAME</columns>
    <columns>Serial_Number__c</columns>
    <columns>Employee_Tech_Assignment__c</columns>
    <columns>Status__c</columns>
    <columns>Date_in_Service__c</columns>
    <columns>Location__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Tag_Number_Formula__c</columns>
    <columns>Model__c</columns>
    <columns>Tag_Number__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Tablet</value>
    </filters>
    <label>Technology, All</label>
</ListView>