force-app/main/default/objects/Fixed_Asset__c/listViews/Technology_Disposed.listView-meta.xml
<ListView>
    <fullName>Technology_Disposed</fullName>
    <columns>NAME</columns>
    <columns>Tag_Number_Formula__c</columns>
    <columns>Status__c</columns>
    <columns>Date_in_Service__c</columns>
    <columns>Disposal_Date__c</columns>
    <columns>Location__c</columns>
    <columns>Fixed_Asset_Description__c</columns>
    <columns>Employee_Tech_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Fixed_Asset__c.Technology</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Disposed</value>
    </filters>
    <label>Technology, Disposed</label>
</ListView>