force-app/main/default/objects/Fixed_Asset__c/listViews/Technology_In_Use.listView-meta.xml
<ListView>
    <fullName>Technology_In_Use</fullName>
    <columns>NAME</columns>
    <columns>Tag_Number_Formula__c</columns>
    <columns>Status__c</columns>
    <columns>Date_in_Service__c</columns>
    <columns>Disposal_Date__c</columns>
    <columns>Location__c</columns>
    <columns>Fixed_Asset_Description__c</columns>
    <columns>Employee_Tech_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>HP</value>
    </filters>
    <label>Technology, In Use</label>
</ListView>