force-app/main/default/objects/Fixed_Asset__c/listViews/Technology_Status_Unknown.listView-meta.xml
<ListView>
    <fullName>Technology_Status_Unknown</fullName>
    <columns>NAME</columns>
    <columns>Tag_Number_Formula__c</columns>
    <columns>Location__c</columns>
    <columns>Fixed_Asset_Description__c</columns>
    <columns>Status__c</columns>
    <columns>Vendor__c</columns>
    <columns>Funding_Source__c</columns>
    <columns>Depreciation_Method__c</columns>
    <columns>Date_in_Service__c</columns>
    <columns>Disposal_Date__c</columns>
    <columns>Employee_Tech_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Warranty_Expiration_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Technology, Status Unknown</label>
</ListView>