force-app/main/default/objects/Fixed_Asset__c/listViews/Vehicles.listView-meta.xml
<ListView>
    <fullName>Vehicles</fullName>
    <columns>NAME</columns>
    <columns>Fixed_Asset_Description__c</columns>
    <columns>Employee_Vehicle_Assignment__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Fixed_Asset__c.Vehicle</value>
    </filters>
    <label>Vehicles</label>
</ListView>